Music player completed

--- a/package.json
+++ b/package.json
@@ -4,20 +4,23 @@
   "description": "desc",
   "main": "index.js",
   "scripts": {
-    "watch:sass": "sass --watch public/sass/main.scss:public/css/styles.css"
+    "watch:sass": "sass --watch public/assets/sass/main.scss:public/assets/css/styles.css"
   },
   "author": "Name",
   "license": "ISC",
-  "dependencies": {},
+  "dependencies": {
+    "live-server": "^1.2.1"
+  },
   "devDependencies": {
-    "eslint": "^5.16.0",
-    "eslint-config-airbnb": "^17.1.1",
-    "eslint-config-prettier": "^4.3.0",
+    "babel-eslint": "^10.1.0",
+    "eslint": "^8.9.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-jsx-a11y": "^6.5.1",
-    "eslint-plugin-node": "^8.0.1",
-    "eslint-plugin-prettier": "^3.4.1",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.28.0",
-    "prettier": "^1.19.1"
+    "prettier": "^2.5.1"
   }
 }
