--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,9 +2,11 @@
   "extends": ["airbnb", "prettier", "plugin:node/recommended"],
   "plugins": ["prettier"],
   "rules": {
+    "no-undef": "off",
     "spaced-comment": "off",
     "no-console": "warn",
     "consistent-return": "off",
+    "parser": "babel-eslint",
     "func-names": "off",
     "object-shorthand": "off",
     "no-process-exit": "off",
