--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -12,6 +12,7 @@
     "no-param-reassign": "off",
     "no-undef": "off",
     "no-useless-return": "off",
+    "no-restricted-syntax": "off",
     "no-restricted-imports": "off",
     "no-restricted-modules": "off",
     "no-plusplus": "off",
