--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start:dev": "nodemon server.js",
     "watch:sass": "sass --watch public/assets/sass/main.scss:public/assets/css/styles.css",
     "parcel:dev": "parcel public/index.html public/singleplayer.html public/multiplayer.html --dist-dir public/dist",
-    "parcel:build": "parcel build public/index.html public/singleplayer.html public/multiplayer.html --dist-dir public/dist",
+    "parcel:build": "parcel build public/index.html public/singleplayer.html public/multiplayer.html --dist-dir public/dist"
   },
   "author": "Name",
   "license": "ISC",
